Fix profile update  issues. Fix SMS verification issue. #TIME 2H

--- a/templates/core/user_profile.html
+++ b/templates/core/user_profile.html
@@ -19,7 +19,7 @@
             </div> 
 
             <div class="alert alert-warning" role="alert" style="display:none" id="alert_verifying_phone">
-                <i class="fa fa-spinner fa-spin" aria-hidden="true"></i>&nbsp;{% trans "Verifying phone now..." %}"
+                <i class="fa fa-spinner fa-spin" aria-hidden="true"></i>&nbsp;{% trans "Verifying phone now..." %}
             </div>
 
             
@@ -29,13 +29,13 @@
                     <div class="input-group"> 
                         <input type="text" aria-label={% trans "Insert SMS verification token here" %} placeholder={% trans "Insert SMS verification token here" %} class="form-control" id="verification_code"> 
                         <div class="input-group-btn"> 
-                            <button class="btn btn-default" type="button" id="verify_phone_now">{% trans "Verify phone now" %}</button> 
+                            <button data-url="{% url 'core.verify_phone' %}" class="btn btn-default" type="button" id="verify_phone_now">{% trans "Verify phone now" %}</button> 
                         </div> 
                     </div> 
                 </div>
 
                 <div class="col-md-4">
-                    <a href="#" class="btn btn-success btn-sm pull-right" id="resend_sms_button">
+                    <a href="#" class="btn btn-success btn-sm pull-right" id="resend_sms_button" data-url="{% url 'core.resend_sms' %}">
                         <i class="fa fa-repeat" aria-hidden="true"></i>&nbsp;{% trans "Send-me the token again" %}
                     </a>
                 </div>
