--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -5,7 +5,9 @@
 
 
 <script src="http://code.jquery.com/jquery.min.js"></script>
-<script   src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"   integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="   crossorigin="anonymous"></script>
+<script   src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"
+          integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="
+          crossorigin="anonymous"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.css" rel="stylesheet">
 <script src="{% static 'js/django_jquery_csrf_setup.js' %}"></script>
 
@@ -22,84 +24,49 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>.:BTC-X:.</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <meta http-equiv="Content-type" content="text/html; charset=utf-8" /> 
+    <meta charset="utf-8">
+    <title>.:BTC-X:.</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 
-  <script src="https://use.fontawesome.com/9a25f329b7.js"></script>
-	<!--link rel="stylesheet/less" href="less/bootstrap.less" type="text/css" /-->
-	<!--link rel="stylesheet/less" href="less/responsive.less" type="text/css" /-->
-	<!--script src="js/less-1.3.3.min.js"></script-->
-	<!--append ‘#!watch’ to the browser URL, then refresh the page. 
-	 -->
+    <script src="https://use.fontawesome.com/9a25f329b7.js"></script>
+    <!--link rel="stylesheet/less" href="less/bootstrap.less" type="text/css" /-->
+    <!--link rel="stylesheet/less" href="less/responsive.less" type="text/css" /-->
+    <!--script src="js/less-1.3.3.min.js"></script-->
+    <!--append ‘#!watch’ to the browser URL, then refresh the page.
+    -->
 
-  <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-  <!--[if lt IE 9]>
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
-  <![endif]-->
+    <![endif]-->
 
-  <!-- Fav and touch icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/apple-touch-icon-144-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-72-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-57-precomposed.png">
-  <link rel="shortcut icon" href="img/favicon.png">
- <!-- 	-->
+    <!-- Fav and touch icons -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" href="img/favicon.png">
+    <!-- 	-->
     <link rel="stylesheet" href="{% static 'css/overrides.css' %}">
-
-  <script type="text/javascript">
-    // TODO: which is the best way to translate JS messages?
-    var HTTP_500_MSG = "{% trans 'Service unavailable. Please try again later.' %}";
-    var UNKNOW_ERROR = HTTP_500_MSG;
-  </script>
+    <script type="text/javascript">
+        // TODO: which is the best way to translate JS messages?
+        var HTTP_500_MSG = "{% trans 'Service unavailable. Please try again later.' %}";
+        var UNKNOW_ERROR = HTTP_500_MSG;
+    </script>
 </head>
-
-
 <body>
+    <div class="container">
+        <div class="menuContainer">
+            {% include 'core/partials/menu.html' %}
+        </div>
 
-
-<div class="container">
-          <div class="menuContainer">
-                {% include 'core/partials/menu.html' %}
-          </div>
-          <!-- Language choosing bar -->
-
-        {% get_language_info_list for LANGUAGES as languages %}
-        <div class="row">
-            <div class="col-md-10 col-xs-10 col-sm-10 col-lg-11"></div>
-            <div class="col-xs-3 col-xs-offset-10">
-                      <form action="{% url 'set_language' %}" method="post">
-                        {% csrf_token %}
-                        <input name="next" type="hidden" value="{{ redirect_to }}" />
-                        <select name="language">
-                        {% get_language_info_list for LANGUAGES as languages %}
-                        {% for language in languages %}
-                        <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected="selected"{% endif %}>
-                            {{ language.name_local }} ({{ language.code }})
-                        </option>
-                        {% endfor %}
-                        </select>
-                        <input type="submit" class="btn btn-warning" value="Go" />
-                      </form>
-
-                </div>
-
-            </div>
-
-
-        <!-- END Language choosing bar -->
-
-		{% block main %}	
-
-		{% endblock %}
-			
- </div>
- 
+        {% block main %}
+        {% endblock %}
+    </div>
     {% block extra_js_footer %} {% endblock %}
-
 </body>
 </html>
 
