resposiveness: Menu bar reponsive on mobile.

--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -66,6 +66,9 @@
         {% block main %}
         {% endblock %}
     </div>
+    {% block main %}
+
+    {% endblock %}
     {% block extra_js_footer %} {% endblock %}
 </body>
 </html>
