--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -181,3 +181,16 @@ select {
 .row.register {
     margin: 30px auto;
 }
+
+.navlink {
+    float: left;
+    height: 50px;
+    padding: 15px;
+    font-size: 18px;
+    line-height: 20px;
+}
+
+
+.navlink.active {
+  background-color: #ccc;
+}
