--- a/templates/core/index_order.html
+++ b/templates/core/index_order.html
@@ -1,7 +1,7 @@
 {% extends "core/base.html" %}
 {% load i18n %}
 {% load staticfiles %}
-
+{% load bootstrap3 %}
 {% block main %}
         	
 			<div class="page-header">
@@ -11,26 +11,31 @@
 			</div>
 			
 			<div class="row">
-				<div class="col-xs-6 col-sm-6 col-md-6">
+				<div class="col-xs-12 col-sm-6 col-md-6">
 								
 					<center>				
 					 <button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='/order/add/'"> {% trans "New" %}</button>
 					 <button type="button" class="btn btn-alert btn-lg" onclick="window.location.href='/'"> {% trans "Exit" %}</button>
 					</center>				
 							
-				 </div>
+				</div>
+
+				<div class="visible-xs"> &nbsp;</div>
 				
-				<div class="col-xs-6 col-sm-6 col-md-6">  
+				<div class="col-xs-12 col-sm-6 col-md-6">
 					<form method="post" class="form">
-					{{form}}
-				    {% csrf_token %}
-					<input type="submit" value="Enviar" />
+						{% bootstrap_field form.date show_label=False form_group_class="form-group col-xs-10" %}
+						<button type="submit" class="btn btn-default"><i class="fa fa-search"></i>&nbsp;</button>
+					    {% csrf_token %}
 				    </form>
 			    </div>
+
+
 			</div>
 			
 			<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-12"> 
+			<div class="table-responsive">
 			  <table class="table table-hover table-condensed">	 
   				<tr>
   					<th>{% trans "Date" %}</th>
@@ -144,6 +149,7 @@
 	    		{% endfor %}
 			   
 			  </table>
+			</div><!-- end responsive -->
 			</div>
 		    </div>
 
