--- a/templates/core/order.html
+++ b/templates/core/order.html
@@ -3,105 +3,152 @@
 {% load staticfiles %}
 
 {% block main %}
-			<div class="page-header">
-				<h1>
-					{% trans "BTC - Exchange" %} <small>{% trans "Order" %} </small>
-				</h1>
-			</div>
-                <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto">
-                </div>
-				<form method="post" class="form" enctype="multipart/form-data" >
-				    {% csrf_token %}
-                    <div class="row">
-                        <div class="col-xs-5 col-sm-5 col-md-5 center-block controls">
-                                <div class="col-lg-12">
-                                    <h2 class="rate-buy">
 
-                                    </h2>
-                                    <h2 class="currency"></h2>
-                                </div>
-                                <div class="col-lg-12">
-                                  <span class="btn btn-success btn-lg active trigger trigger-buy">
-                                        {% trans "Buy" %}
-                                  </span>
-                                </div>
-                            </div>
-                        <div class="col-xs-1 col-sm-1 col-md-1"></div>
-                        <div class="col-xs-5 col-sm-5 col-md-5 controls">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <h2 class="rate-sell">
+ <div class="row">
+  <div class="process">
+   <div class="process-row nav nav-tabs">
+    <div class="process-step">
+     <button type="button" class="btn btn-info btn-circle" data-toggle="tab" href="#menu1"><i class="fa fa-info fa-3x"></i></button>
+     <p><small>{% trans "Check" %}<br />{% trans "Graph" %}</small></p>
+    </div>
+    <div class="process-step">
+     <button type="button" class="btn btn-default btn-circle" data-toggle="tab" href="#menu2"><i class="fa fa-file-text-o fa-3x"></i></button>
+     <p><small>{% trans "Set amount to" %}<br />{% trans "Buy or Sell" %}</small></p>
+    </div>
+    <div class="process-step">
+     <button type="button" class="btn btn-default btn-circle" data-toggle="tab" href="#menu3"><i class="fa fa-cogs fa-3x"></i></button>
+     <p><small>{% trans "Already User ?" %}<br />{% trans "Register !" %}</small></p>
+    </div>
+    <div class="process-step">
+     <button type="button" class={% if user.is_authenticated %} "btn btn-default btn-circle" {% else %} "btn btn-default btn-circle disabled disableClick" {% endif %} data-toggle="tab" href="#menu5"><i class="fa fa-check fa-3x"></i></button>
+     <p><small>{% trans "Confirm you" %}<br />{% trans "Order" %}</small></p>
+    </div>
+   </div>
+  </div>
+  <div class="tab-content">
+   <div id="menu1" class="tab-pane fade active in">
+        <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto">
+        </div>
+    <ul class="list-unstyled list-inline pull-right">
+     <li><button type="button" class="btn btn-info next-step">Next <i class="fa fa-chevron-right"></i></button></li>
+    </ul>
+   </div>
+   <div id="menu2" class="tab-pane fade">
+	<form method="post" class="form" enctype="multipart/form-data" >
+	    {% csrf_token %}
+	    <div class="row">
+	        <div class="col-xs-5 col-sm-5 col-md-5 center-block controls">
+	                <div class="col-lg-12">
+	                    <h2 class="rate-buy">
 
-                                    </h2>
-                                    <h2 class="currency"></h2>
-                                </div>
-                                <div class="col-lg-12">
-                                  <span class="btn btn-danger btn-lg trigger trigger-sell">
-                                        {% trans "Sell" %}
-                                  </span>
-                                </div>
-                            </div>
-                        </div>
+	                    </h2>
+	                    <h2 class="currency"></h2>
+	                </div>
+	                <div class="col-lg-12">
+	                  <span class="btn btn-success btn-lg active trigger trigger-buy">
+	                        {% trans "Buy" %}
+	                  </span>
+	                </div>
+	            </div>
+	        <div class="col-xs-1 col-sm-1 col-md-1"></div>
+	        <div class="col-xs-5 col-sm-5 col-md-5 controls">
+	            <div class="row">
+	                <div class="col-lg-12">
+	                    <h2 class="rate-sell">
 
-                    </div>
-{#				   <div class="row">#}
-{#                       <div class="col-xs-5 col-sm-5 col-md-5">#}
-{#                        <p id="exchange-text">{% trans "Exchange from" %} <strong>{% trans "BitCoins" %}</strong> {% trans "to other Currencies" %}</strong> </p>#}
-{#                       </div>#}
-{#				   </div>#}
-				   <div class="row">
-				   	  <div class="col-xs-5 col-sm-5 col-md-5">
-					      <div class="panel panel-default">
-						    <div class="panel-body">						    	
-						           <div class="input-group">
-								      <input type="text" class="form-control amount amount-cash rate-buy"  name="amount-cash">
-								      <div class="input-group-btn">
-										{{slt1 | safe}}
-								      </div><!-- /btn-group -->
-								    </div><!-- /input-group -->
-						    </div><!-- /pannel-body -->
-						  </div><!-- /pannel -->
-					 </div><!-- /col -->
+	                    </h2>
+	                    <h2 class="currency"></h2>
+	                </div>
+	                <div class="col-lg-12">
+	                  <span class="btn btn-danger btn-lg trigger trigger-sell">
+	                        {% trans "Sell" %}
+	                  </span>
+	                </div>
+	            </div>
+	        </div>
 
-					<div class="col-xs-1 col-sm-1 col-md-1">
-					<h2>TO</h2>
-                    </div><!-- /col -->
-					
-					<div class="col-xs-5 col-sm-5 col-md-5">
-					      <div class="panel panel-default">
-						    <div class="panel-body">
-						           <div class="input-group">
-								      <input type="text" class="form-control amount amount-coin" value="1" name="amount-coin">
-								      <div class="input-group-btn">
-								        {{slt2 | safe}}
-								      </div><!-- /btn-group -->
-								    </div><!-- /input-group -->
-						    </div><!-- /pannel-body -->
-						  </div><!-- /pannel -->  
-					</div><!-- /col -->
+	    </div>
+	{#				   <div class="row">#}
+	{#                       <div class="col-xs-5 col-sm-5 col-md-5">#}
+	{#                        <p id="exchange-text">{% trans "Exchange from" %} <strong>{% trans "BitCoins" %}</strong> {% trans "to other Currencies" %}</strong> </p>#}
+	{#                       </div>#}
+	{#				   </div>#}
+	   <div class="row">
+	   	  <div class="col-xs-5 col-sm-5 col-md-5">
+		      <div class="panel panel-default">
+			    <div class="panel-body">						    	
+			           <div class="input-group">
+					      <input type="text" class="form-control amount amount-cash rate-buy"  name="amount-cash">
+					      <div class="input-group-btn">
+							{{slt1 | safe}}
+					      </div><!-- /btn-group -->
+					    </div><!-- /input-group -->
+			    </div><!-- /pannel-body -->
+			  </div><!-- /pannel -->
+		 </div><!-- /col -->
 
-					</div><!-- /row -->
-				    <div class="row">
-						 <div class="col-xs-4 col-sm-4 col-md-4 col-xs-offset-3">
-						 	<div class="panel panel-default">
-						      <div class="panel-body">
-						      	<center>
-                                    <input type="hidden" name="type" value="buy" class="trade-type">
-					    		    <button type="submit" class="sell-go btn btn-danger btn-lg hidden">{% trans "Sell" %}</button>
-					    		    <button type="submit" class="buy-go btn btn-success btn-lg">{% trans "Buy" %}</button>
-{#					    		    <button type="button" class="btn btn-warning btn-lg" onclick="window.location.href='/order/'">{% trans "Exit" %}</button>#}
-								</center>
-							 </div>
-							</div>
-						</div>
+		<div class="col-xs-1 col-sm-1 col-md-1">
+		<h2>TO</h2>
+	    </div><!-- /col -->
+		
+		<div class="col-xs-5 col-sm-5 col-md-5">
+		      <div class="panel panel-default">
+			    <div class="panel-body">
+			           <div class="input-group">
+					      <input type="text" class="form-control amount amount-coin" value="1" name="amount-coin">
+					      <div class="input-group-btn">
+					        {{slt2 | safe}}
+					      </div><!-- /btn-group -->
+					    </div><!-- /input-group -->
+			    </div><!-- /pannel-body -->
+			  </div><!-- /pannel -->  
+		</div><!-- /col -->
+		</div><!-- /row -->
+    <ul class="list-unstyled list-inline pull-right">
+     <li><button type="button" class="btn btn-default prev-step"><i class="fa fa-chevron-left"></i> Back</button></li>
+     <li><button type="button" class="btn btn-info next-step">Next <i class="fa fa-chevron-right"></i></button></li>
+    </ul>
+   </div>
+   <div id="menu3" class="tab-pane fade">
+   	{% if user.is_authenticated %}
+      <h3>{% trans "Your only " %}</h3>
+      <p>{% trans "1 Step away !" %}</p>
+     {% else %}
+           <p>{% trans "Please" %}
+          <a class="nav-link" href="{% url 'accounts.login' %}"> {% trans "Login" %} </a> </p>
+          <p>{% trans "Or" %}
+          <a class="nav-link" href="{% url 'core.user_registration' %}"> {% trans "Register" %} </a></p>
+     {% endif %} 
+    <ul class="list-unstyled list-inline pull-right">
+     <li><button type="button" class="btn btn-default prev-step"><i class="fa fa-chevron-left"></i> Back</button></li>
+     {% if user.is_authenticated %} 
+     <li><button type="button" class="btn btn-info next-step">Next <i class="fa fa-chevron-right"></i></button></li>
+     {% endif %}
+    </ul>
+   </div>
+   <div id="menu5" class="tab-pane fade">
+        <h3>{% trans "Finally !" %}</h3>
+    <p>{% trans "Confirm to place you order" %}</p>
+      <input type="hidden" name="type" value="buy" class="trade-type">
+	     <button type="submit" class="sell-go btn btn-danger btn-lg hidden">{% trans "Sell" %}</button>
+	     <button type="submit" class="buy-go btn btn-success btn-lg">{% trans "Buy" %}</button>
+{#	     <button type="button" class="btn btn-warning btn-lg" onclick="window.location.href='/order/'">{% trans "Exit" %}</button>#}
+	</div>    	
+  </form>
 
-					</div>    
-				    <hr>
-				</form>
+   </div>
+  </div>
+ </div>
+
+
+
+
+
 {% endblock %}
 {% block extra_js_footer %}
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/highcharts-more.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'js/add_orders.js' %}"></script>
 {% endblock %}
