--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -1,3 +1,7 @@
+html body {
+    overflow-x: hidden;
+}
+
 .controls {
     text-align: center;
     margin: 20px 0;
@@ -11,6 +15,12 @@
     float: right !important;
     margin-right: 5px;
 
+}
+
+.spa-navigation {
+     text-align: center;
+     margin: auto;
+     width: 100%;
 }
 
 .post-content-menu {
