--- a/templates/core/order.html
+++ b/templates/core/order.html
@@ -15,21 +15,25 @@
      <button type="button" class="btn btn-default btn-circle" data-toggle="tab" href="#menu2"><i class="fa fa-file-text-o fa-3x"></i></button>
      <p><small>{% trans "Set amount to" %}<br />{% trans "Buy or Sell" %}</small></p>
     </div>
+   {% if not user.is_authenticated %}
     <div class="process-step">
-     <button type="button" class="btn btn-default btn-circle" data-toggle="tab" href="#menu3"><i class="fa fa-cogs fa-3x"></i></button>
+     <button type="button" class="btn btn-default btn-circle" data-toggle="tab" href="#menu3"><i class="fa fa-mobile fa-3x"></i></button>
      <p><small>{% trans "Already User ?" %}<br />{% trans "Register !" %}</small></p>
     </div>
+   {% endif %}
     <div class="process-step">
-     <button type="button" class={% if user.is_authenticated %} "btn btn-default btn-circle" {% else %} "btn btn-default btn-circle disabled disableClick" {% endif %} data-toggle="tab" href="#menu5"><i class="fa fa-check fa-3x"></i></button>
+     <button type="button" class={% if user.is_authenticated %} "btn btn-default btn-circle"
+        {% else %} "btn btn-default btn-circle disabled disableClick" {% endif %}
+        data-toggle="tab" href="#menu5"><i class="fa fa-btc fa-3x"></i></button>
      <p><small>{% trans "Confirm you" %}<br />{% trans "Order" %}</small></p>
     </div>
    </div>
   </div>
   <div class="tab-content">
    <div id="menu1" class="tab-pane fade active in">
-        <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto">
+        <div id="container" style="min-width: 250px; height: 350px; margin: 0 auto">
         </div>
-    <ul class="list-unstyled list-inline pull-right">
+    <ul class="list-unstyled list-inline spa-navigation">
      <li><button type="button" class="btn btn-info next-step">Next <i class="fa fa-chevron-right"></i></button></li>
     </ul>
    </div>
