--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -1,7 +1,10 @@
 html body {
     overflow-x: hidden;
 }
-
+.center, .tab-pane {
+    text-align: center;
+    margin: auto;
+}
 .controls {
     text-align: center;
     margin: 20px 0;
