--- a/templates/core/order.html
+++ b/templates/core/order.html
@@ -24,8 +24,14 @@
     <div class="process-step">
      <button type="button" class={% if user.is_authenticated %} "btn btn-default btn-circle"
         {% else %} "btn btn-default btn-circle disabled disableClick" {% endif %}
-        data-toggle="tab" href="#menu5"><i class="fa fa-btc fa-3x"></i></button>
-     <p><small>{% trans "Confirm you" %}<br />{% trans "Order" %}</small></p>
+        data-toggle="tab" href="#menu4"><i class="fa fa-btc fa-3x"></i></button>
+     <p><small>{% trans "Confirm your" %}<br />{% trans "Order" %}</small></p>
+    </div>
+    <div class="process-step">
+     <button type="button" class={% if user.is_authenticated %} "btn btn-default btn-circle"
+        {% else %} "btn btn-default btn-circle disabled disableClick" {% endif %}
+        data-toggle="tab" href="#menu5"><i class="fa fa-money fa-3x"></i></button>
+     <p><small>{% trans "Process" %}<br />{% trans "the payment" %}</small></p>
     </div>
    </div>
   </div>
@@ -113,8 +119,9 @@
      <li><button type="button" class="btn btn-info next-step">Next <i class="fa fa-chevron-right"></i></button></li>
     </ul>
     </div>
-   <div id="menu3" class="tab-pane fade">
-            <h4>{% trans "Phone verefication" %}</h4>
+    {% if not user.is_authenticated %} 
+   	<div id="menu3" class="tab-pane fade">
+            <h4>{% trans "Phone verification" %}</h4>
             <div class="row register step1">
                 <div class="col col-lg-12">
                     {% trans "Enter your phone" %}
@@ -131,24 +138,34 @@
 
             <div class="row register step2 hidden">
                 <div class="col col-lg-12">
-                    {% trans "Enter verefication code from SMS" %}
+                    {% trans "Enter verification code from SMS" %}
                 </div>
                 <div class="col col-lg-12">
                     <input type="text" name="token" id="token">
                 </div>
                 <div class="col col-lg-12 center">
                     <span class="btn btn-primary verify-acc">
-                        {% trans "Send SMS" %}
+                        {% trans "Verify Code" %}
                     </span>
                 </div>
             </div>
     <ul class="list-unstyled list-inline spa-navigation">
      <li><button type="button" class="btn btn-default prev-step"><i class="fa fa-chevron-left"></i> Back</button></li>
-     {% if user.is_authenticated %} 
-     <li><button type="button" class="btn btn-info next-step">Next <i class="fa fa-chevron-right"></i></button></li>
-     {% endif %}
-    </ul>
+      </ul>
    </div>
+     {% endif %}
+
+   <div id="menu4" class="tab-pane fade">
+        <h3>{% trans "Order" %}</h3>
+    <p>{% trans "amount:" %}</p>
+    <h2 class="amount amount-cash rate-buy"></h2>
+
+      <input type="hidden" name="type" value="buy" class="trade-type">
+	     <button type="submit" class="sell-go btn btn-danger btn-lg hidden">{% trans "Sell" %}</button>
+	     <button type="submit" class="buy-go btn btn-success btn-lg">{% trans "Buy" %}</button>
+{#	     <button type="button" class="btn btn-warning btn-lg" onclick="window.location.href='/order/'">{% trans "Exit" %}</button>#}
+	</div> 
+
    <div id="menu5" class="tab-pane fade">
         <h3>{% trans "Finally !" %}</h3>
     <p>{% trans "Confirm to place you order" %}</p>
@@ -156,7 +173,9 @@
 	     <button type="submit" class="sell-go btn btn-danger btn-lg hidden">{% trans "Sell" %}</button>
 	     <button type="submit" class="buy-go btn btn-success btn-lg">{% trans "Buy" %}</button>
 {#	     <button type="button" class="btn btn-warning btn-lg" onclick="window.location.href='/order/'">{% trans "Exit" %}</button>#}
-	</div>    	
+	</div> 
+
+   	
   </form>
 
    </div>
