--- a/templates/core/order.html
+++ b/templates/core/order.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 
 {% block main %}
-  <div class="row process-container">
+  <div class="row breadcrumbsContainer">
     {% include 'core/partials/breadcrumbs.html' %}
   </div>
   <div class="tab-content">
@@ -113,6 +113,9 @@
                 <div class="col col-lg-12 center">
                     <span class="btn btn-primary create-acc">
                         {% trans "Send SMS" %}
+                    </span>
+                    <span class="btn btn-primary create-acc resend hidden">
+                        {% trans "Send again" %}
                     </span>
                     <span class="btn btn-primary verify-acc hidden">
                         {% trans "Go" %}
