--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -182,6 +182,15 @@ select {
     margin: 30px auto;
 }
 
+@media screen and (max-device-width: 600px){
+    .btn-circle{
+        width:60px;
+        height:60px;
+    }
+    .process-row:before{
+        top: 30px;
+    }
+}
 .navlink {
     float: left;
     height: 50px;
