--- a/templates/core/result_order.html
+++ b/templates/core/result_order.html
@@ -3,25 +3,29 @@
 {% block main %}
 
 
-	   <div class="row">
-		<hr>
-	   </div>
-	   <div class="row">
-	   	  <div class="col-xs-4 col-sm-4 col-md-4 col-xs-offset-4">
-			<div class="jumbotron">
-			  <center><h1>Sucess !</h1></center>
-			  <p>Please tranfer to this bank account:</p> 
-			  <p>{{bank_account}}</p>
-			  <br>
-			  <p>Using this reference number:</p> 
-			  <p>{{unique_ref}}</p>
-			  {% localtime on %}
-			  <p id="pay_until_notice">Notice that you must pay until <strong>{{pay_until |date:"H:iA (e)"}}</strong> </p>
-			  {% endlocaltime %}
-			  <p><a class="btn btn-primary btn-lg" role="button" href="/order/">Done ! </a></p>
-			</div>
-		 </div><!-- /col -->				
-		</div><!-- /row -->
+<div class="row">
+	<hr>
+</div>
+<div class="row">
+	<div class="col-xs-12 col-sm-6 col-md-6 col-sm-offset-3 col-md-offset-3">
+		<div class="jumbotron">
+			<center><h1>Sucess !</h1></center>
+			<p>Please tranfer to this bank account:</p> 
+			<p>{{bank_account}}</p>
+			<br>
+			<p>Using this reference number:</p> 
+			<p>{{unique_ref}}</p>
+			{% localtime on %}
+			<p id="pay_until_notice">Notice that you must pay until <strong>{{pay_until |date:"H:iA (e)"}}</strong> </p>
+			{% endlocaltime %}
+			<p class="text-center">
+				<a class="btn btn-primary btn-lg" role="button" href="{% url 'core.order_add' %}">Done ! </a></p>
+		</div>
+	</div><!-- /col -->
 
-	    <hr>
+
+</div><!-- /row -->
+
+<hr>
+
 {% endblock %}
