--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -11,6 +11,16 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.css" rel="stylesheet">
 <script src="{% static 'js/django_jquery_csrf_setup.js' %}"></script>
 
+<script src="{% static 'bower_components/moment/moment.js' %}"></script>
+<script src="{% static 'bower_components/moment-timezone/builds/moment-timezone-with-data.min.js' %}"></script>
+<script src="{% static 'bower_components/js-cookie/src/js.cookie.js' %}"></script>
+<script>
+$( document ).ready(function() {
+  Cookies.set("USER_TZ", moment.tz.guess());
+});
+</script>
+
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 {# Load CSS and JavaScript #}
