--- a/templates/core/partials/menu.html
+++ b/templates/core/partials/menu.html
@@ -16,6 +16,8 @@
         <ul class="nav navbar-nav navbar-right">
           <li class="nav-item">
             <a class="nav-link" href="{% url 'core.user_profile' user.username  %}"> {% trans "User" %}: <strong> {{ user.username }} </strong></a>
+            <input type="hidden" name="user_id" id="user_id" value="{{ user.id }}">
+
           </li>
 
           <li class="nav-item">
