--- a/templates/core/partials/success_order.html
+++ b/templates/core/partials/success_order.html
@@ -2,20 +2,27 @@
 {% load tz %}
 
 	   <div class="row">
-	   	  <div class="col-xs-6 col-sm-6 col-md-6 col-xs-offset-3">
-			<div class="jumbotron">
+	   	  <div class="col-xs-4 col-sm-4 col-md-4 col-xs-offset-4">
+			<div class="panel panel-success">
+   			 <div class="panel-body">
 			  <center><h1>Sucess !</h1></center>
 			  <p>Please tranfer to this bank account:</p> 
 			  <p>{{bank_account}}</p>
-			  <br>
 			  <p>Using this reference number:</p> 
 			  <p>{{unique_ref}}</p>
 			  {% localtime on %}
 			  <p id="pay_until_notice">Notice that you must pay until <strong>{{pay_until |date:"H:iA (e)"}}</strong> </p>
 			  {% endlocaltime %}
 			{#  <p><a class="btn btn-primary btn-lg" role="button" href="/order/">Done ! </a></p> #}
-			</div>
+			 </div><!-- /pannel-body -->
+            </div><!-- /pannel --> 
+			<ul class="list-unstyled list-inline spa-navigation ">
+		        <li><button type="button" class="btn btn-default prev-step"><i class="fa fa-chevron-left"></i> Back</button></li>
+		        <li><button type="button" class="btn btn-info next-step">Next <i class="fa fa-chevron-right"></i></button></li>
+      		</ul>
 		 </div><!-- /col -->				
 		</div><!-- /row -->
 
-	    
+<script>
+     $('.next-step, .prev-step').on('click', changeState);
+</script>
