--- a/templates/core/partials/breadcrumbs.html
+++ b/templates/core/partials/breadcrumbs.html
@@ -6,7 +6,7 @@
      <p><small>{% trans "Check" %}<br />{% trans "Graph" %}</small></p>
     </div>
     <div class="process-step step2">
-     <button type="button" class="btn btn-default btn-circle" data-toggle="tab" href="#menu2"><i class="fa fa-exchange fa-3x"></i></button>
+     <button type="button" class="btn btn-default btn-circle choose-opr" data-toggle="tab" href="#menu2"><i class="fa fa-exchange fa-3x"></i></button>
      <p><small>{% trans "Set amount to" %}<br />{% trans "Buy or Sell" %}</small></p>
     </div>
    {% if not user.is_authenticated %}
