--- a/templates/core/partials/success_order.html
+++ b/templates/core/partials/success_order.html
@@ -16,6 +16,8 @@
 			{#  <p><a class="btn btn-primary btn-lg" role="button" href="/order/">Done ! </a></p> #}
 			 </div><!-- /pannel-body -->
             </div><!-- /pannel --> 
+             <input type="hidden" name="order_id" value="{{order_id}}" class="order_id" >
+
 			<ul class="list-unstyled list-inline spa-navigation ">
 		        <li><button type="button" class="btn btn-default prev-step"><i class="fa fa-chevron-left"></i> Back</button></li>
 		        <li><button type="button" class="btn btn-info next-step">Next <i class="fa fa-chevron-right"></i></button></li>
