--- a/templates/core/partials/menu.html
+++ b/templates/core/partials/menu.html
@@ -15,7 +15,7 @@
         {% if user.is_authenticated %}
         <ul class="nav navbar-nav navbar-right">
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'core.user_profile' user.username  %}"> {% trans "User" %}: <strong> {{ user.username }} </strong></a>
+            <a class="nav-link" href="{% url 'core.user_profile'  %}"> {% trans "User" %}: <strong> {{ user.username }} </strong></a>
             <input type="hidden" name="user_id" id="user_id" value="{{ user.id }}">
 
           </li>
