--- a/templates/core/index_order.html
+++ b/templates/core/index_order.html
@@ -131,7 +131,7 @@
 								data-value="{{order.withdraw_address| default_if_none:''}}"
 								data-pk="{{order.pk}}" 
 								data-url="{% url 'core.update_withdraw_address' order.pk %}" 
-								data-title="{% trans "Change Withdraw Address"%}">
+								data-title="{% trans "Select Withdraw Address"%}">
 								{{order.transaction_set.first.address_to.address | default_if_none:_("Not Defined")}}
 							</span>
 		            	</td>
