--- a/templates/core/order.html
+++ b/templates/core/order.html
@@ -3,185 +3,17 @@
 {% load staticfiles %}
 
 {% block main %}
+<div class="tab-content">
   <div class="row breadcrumbsContainer">
     {% include 'core/partials/breadcrumbs.html' %}
   </div>
-  <div class="tab-content">
-   <div id="menu1" class="tab-pane fade active in">
-        <div id="container" style="min-width: 250px; height: 350px; margin: 0 auto">
-        </div>
-    <ul class="list-unstyled list-inline spa-navigation">
-     <li><button type="button" class="btn btn-info next-step">Next <i class="fa fa-chevron-right"></i></button></li>
-    </ul>
-   </div>
-   <div id="menu2" class="tab-pane fade">
-	{# <form method="post" class="form" enctype="multipart/form-data" > #}
-	    
-	    <div class="row">
-	        <div class="col-xs-5 col-sm-5 col-md-5 center-block controls">
-	                <div class="col-lg-12">
-	                    <h2 class="rate-buy">
-
-	                    </h2>
-	                    <h2 class="currency"></h2>
-	                </div>
-	                <div class="col-lg-12">
-	                  <span class="btn btn-success btn-lg active trigger trigger-buy">
-	                        {% trans "Buy" %}
-	                  </span>
-	                </div>
-	            </div>
-	        <div class="col-xs-1 col-sm-1 col-md-1"></div>
-	        <div class="col-xs-5 col-sm-5 col-md-5 controls">
-	            <div class="row">
-	                <div class="col-lg-12">
-	                    <h2 class="rate-sell">
-
-	                    </h2>
-	                    <h2 class="currency"></h2>
-	                </div>
-	                <div class="col-lg-12">
-	                  <span class="btn btn-danger btn-lg trigger trigger-sell">
-	                        {% trans "Sell" %}
-	                  </span>
-	                </div>
-	            </div>
-	        </div>
-
-	    </div>
-
-        <div class="row">
-            <div class="col-xs-12 col-sm-5 col-md-5">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <div class="input-group">
-                            <input type="text" class="form-control amount amount-cash rate-buy"  name="amount-cash">
-                            <div class="input-group-btn">
-                                {{slt1 | safe}}
-                            </div><!-- /btn-group -->
-                        </div><!-- /input-group -->
-                    </div><!-- /pannel-body -->
-                </div><!-- /pannel -->
-            </div><!-- /col -->
-
-            <div class="col-xs-12 col-sm-1 col-md-1">
-                <h2>TO</h2>
-            </div><!-- /col -->
-
-            <div class="col-xs-12 col-sm-5 col-md-5">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <div class="input-group">
-                            <input type="text" class="form-control amount amount-coin" value="1" name="amount-coin">
-                            <div class="input-group-btn">
-                                {{slt2 | safe}}
-                            </div><!-- /btn-group -->
-                        </div><!-- /input-group -->
-                    </div><!-- /pannel-body -->
-                </div><!-- /pannel -->  
-            </div><!-- /col -->
-        </div><!-- /row -->
-
-    <ul class="list-unstyled list-inline spa-navigation">
-     <li><button type="button" class="btn btn-default prev-step choose-opr"><i class="fa fa-chevron-left"></i> Back</button></li>
-     <li><button type="button" class="btn btn-info next-step choose-opr ">Next <i class="fa fa-chevron-right"></i></button></li>
-    </ul>
-    </div>
-    {% if not user.is_authenticated %} 
-   	<div id="menu3" class="tab-pane fade">
-            <h4>{% trans "Phone verification" %}</h4>
-            <div class="register">
-                <div class="step1">
-                    <div class="col col-lg-12">
-                        {% trans "Enter your phone" %}
-                    </div>
-                    <div class="col col-lg-12">
-                        <input type="text" name="phone" id="phone" placeholder ="+7">
-                    </div>
-                </div>
-                <div class="step2 hidden">
-                    <div class="col col-lg-12">
-                        {% trans "Enter verification code from SMS" %}
-                    </div>
-                    <div class="col col-lg-12">
-                        <input type="text" name="verification_code" id="verification_code">
-                    </div>
-                </div>
-                <div class="col col-lg-12 center">
-                    <span class="btn btn-primary create-acc">
-                        {% trans "Send SMS" %}
-                    </span>
-                    <span class="btn btn-primary create-acc resend hidden">
-                        {% trans "Send again" %}
-                    </span>
-                    <span class="btn btn-primary verify-acc hidden">
-                        {% trans "Go" %}
-                    </span>
-                </div>
-            </div>
-
-
-    <ul class="list-unstyled list-inline spa-navigation">
-     <li><button type="button" class="btn btn-default prev-step"><i class="fa fa-chevron-left"></i> Back</button></li>
-      </ul>
-   </div>
-     {% endif %}
-
-   <div id="menu4" class="tab-pane fade">
-   	  <div class="row  menu4">
-
-        <h3>{% trans "Order" %}</h3>
-        <p>{% trans "amount:" %}</p>
-       <h2 class="amount amount-cash rate-buy"></h2>
-        <div style="display:none">
-          <input type="hidden" name="csrfmiddlewaretoken" id="csrfmiddlewaretoken" value="{{ csrf_token }}">
-        </div>
-      	<input type="hidden" name="type" value="1" class="trade-type" >
-	    <button  class="sell-go btn btn-danger btn-lg place-order hidden">{% trans "Sell" %}</button>
-	    <button  class="buy-go btn btn-success btn-lg place-order ">{% trans "Buy" %}</button>
-
-	 </div>
-     <div class="row successOrder hidden ">
-        {% include 'core/partials/success_order.html' %}
-
-      </div>
-	</div> 
-
-   <div id="menu5" class="tab-pane fade ">
-		<div class="row paymentMethodsHead ">
-   		<h3>{% trans "Payment" %}</h3>
-        <p>{% trans "Choose your payment method to finish !" %}</p>
-        
-        </div>
-   	    <div class="row paymentMethods hidden ">
-
-	        {% include 'core/partials/payment_methods.html' %}
-	      
-	    </div>
-
-	    <div class="row paymentSuccess hidden ">
-
-	        {% include 'core/partials/success_payment.html' %}
-	      
-	    </div>
-
-		<div class="row paymentMethodsHead ">
-
-         <button  class="btn btn-danger btn-lg make-payment hidden">{% trans "Pay" %}</button>
-	     <button  class="btn btn-success btn-lg make-payment">{% trans "Pay" %}</button>
-        </div>
-	  
-{#	     <button type="button" class="btn btn-warning btn-lg" onclick="window.location.href='/order/'">{% trans "Exit" %}</button>#}
-	</div> 
-
-   </div>
-  </div>
- </div>
-
-
-
-
-
+    {% include 'core/partials/steps/step_graph.html' with id="menu1" %}
+    {% include 'core/partials/steps/step_amount.html' with id="menu2" %}
+    {% if not user.is_authenticated %}
+        {% include 'core/partials/steps/step_authentication.html' with id="menu3" %}
+    {% endif %}
+    {% include 'core/partials/steps/step_confirmation.html' with id="menu4" %}
+    {% include 'core/partials/steps/step_success.html' with id="menu5" %}
 {% endblock %}
 {% block extra_js_footer %}
     <script src="https://code.highcharts.com/highcharts.js"></script>
