--- a/templates/core/partials/steps/step_confirmation.html
+++ b/templates/core/partials/steps/step_confirmation.html
@@ -3,8 +3,29 @@
 
 {% block step_content %}
     <h3>{% trans "Order" %}</h3>
-    <p>{% trans "amount:" %}</p>
-    <h2 class="amount amount-cash rate-buy"></h2>
+    <div class="row">
+    <div class="col-sm-12 center">
+        <div class="col-sm-5 col-md-5">
+                <div class="col-lg-12">
+                    <h2 class="amount amount-coin rate-buy"></h2>
+                </div>
+                <div class="col-lg-12">
+                    {%  trans "BTC" %}
+                </div>
+        </div>
+        <div class="col-sm-2 col-md-2">
+            <h2>{% trans "For" %}</h2>
+        </div>
+        <div class="col-sm-5 col-md-5">
+            <div class="col-lg-12">
+                <h2 class="amount amount-cash rate-buy"></h2>
+            </div>
+            <div class="col-lg-12">
+                {%  trans "RUB" %}
+            </div>
+        </div>
+    </div>
+    </div>
     <div style="display:none">
       <input type="hidden" name="csrfmiddlewaretoken" id="csrfmiddlewaretoken" value="{{ csrf_token }}">
     </div>
