#1 HOUR layout for using modal windows for payment methods when buying and useraccount when selling

--- a/templates/core/partials/steps/step_success.html
+++ b/templates/core/partials/steps/step_success.html
@@ -6,8 +6,8 @@
         <h3>{% trans "Payment" %}</h3>
         <p>{% trans "Choose your payment method to finish !" %}</p>
     </div>
-    <div class="row paymentMethods hidden ">
-        {% include 'core/partials/payment_methods.html' %}
+    <div class="row paymentMethods_old hidden ">
+    {#    {% include 'core/partials/payment_methods.html' %} #}
     </div>
     <div class="row paymentSuccess hidden ">
         {% include 'core/partials/success_payment.html' %}
