--- a/templates/core/partials/steps/step_amount.html
+++ b/templates/core/partials/steps/step_amount.html
@@ -64,4 +64,55 @@
             </div><!-- /pannel -->
         </div><!-- /col -->
     </div>
+
+
+  <!-- Modal -->
+  <div class="modal fade" id="PayMethModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">×</button>
+          <h4 class="modal-title">Pick a payment method</h4>
+        </div>
+        <div class="modal-body">
+            <div class=" paymentMethods ">
+                {% include 'core/partials/payment_methods.html' %}
+            </div >         
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+
+
+  <!-- Modal -->
+  <div class="modal fade" id="UserAccountModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">×</button>
+          <h4 class="modal-title">Pick one of your previous accounts</h4>
+        </div>
+        <div class="modal-body">
+                    {% include 'core/partials/payment_methods.html' %}
+        </div>
+                  <p>Or just use a new one !</p>
+                <input type="text" name="new_user_account" id="new_user_account">
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+
+
 {% endblock %}
