--- a/templates/core/partials/steps/step_amount.html
+++ b/templates/core/partials/steps/step_amount.html
@@ -80,6 +80,9 @@
             <div class=" paymentMethods ">
                 {% include 'core/partials/payment_methods.html' %}
             </div >         
+            <div class=" paymentMethodsAccount hidden">
+                {% include 'core/partials/payment_methods_account.html' %}
+            </div >
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -101,7 +104,7 @@
           <h4 class="modal-title">Pick one of your previous accounts</h4>
         </div>
         <div class="modal-body">
-                    {% include 'core/partials/payment_methods.html' %}
+                    {% include 'core/partials/user_address.html' %}
         </div>
                   <p>Or just use a new one !</p>
                 <input type="text" name="new_user_account" id="new_user_account">
